--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,14 @@
 body {
     margin: 0;
     padding: 0;
+
+    .flash-card {
+        height: 100vh;
+
+        .card-footer {
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+    }
 }
