--- a/src/App.scss
+++ b/src/App.scss
@@ -32,13 +32,29 @@ body {
 
         h2 {
             font-size: 18em;
-            line-height: 1.2em;
+            line-height: 1.2em; /* normal */
+
+            &.vowel {
+                font-size: 16em;
+            }
 
             &.dor-cha-daa,
             &.yor-yin,
             &.thor-pa-tak,
             &.thor-taan {
-                line-height: .9em;
+                line-height: .9em; /* slightly moved up from normal */
+            }
+
+            &.vowel.i,
+            &.vowel.ii,
+            &.vowel.ue,
+            &.vowel.uee {
+                line-height: 1.35em; /* slightly moved down from normal */
+            }
+
+            &.vowel.u,
+            &.vowel.uu {
+                line-height: 1em; /* slightly moved up from normal */
             }
         }
 
