--- a/src/App.scss
+++ b/src/App.scss
@@ -27,7 +27,7 @@ body {
     }
 
     .flash-card {
-        height: calc(100vh - (34px + 1rem));
+        height: calc(100dvh - (34px + 1rem));
         overflow: hidden;
 
         h2 {
