--- a/src/App.scss
+++ b/src/App.scss
@@ -32,7 +32,7 @@ body {
 
         h2 {
             font-size: 18em;
-            line-height: 1.4em; /* normal */
+            line-height: 1.3em; /* normal */
 
             &.vowel {
                 font-size: 14em;
@@ -58,14 +58,38 @@ body {
             }
 
             &.vowel.eh,
-            &.vowel.ae {
-                font-size: 10em;
+            &.vowel.ae,
+            &.vowel.oh,
+            &.vowel.oe,
+            &.vowel.ia {
+                font-size: 9.7em;
                 line-height: 1.8em; /* slightly moved down from normal */
             }
 
-            &.vowel.eh {
+            &.vowel.eh,
+            &.vowel.oee,
+            &.vowel.iia {
                 font-size: 13em;
                 line-height: 1.5em; /* slightly moved up from normal */
+            }
+
+            &.vowel.ohh {
+                line-height: 1.8em;
+            }
+
+            &.vowel.oe,
+            &.vowel.oh {
+                line-height: 2.2em;
+            }
+
+            &.vowel.oh {
+                font-size: 12em;
+                line-height: 1.9em;
+            }
+
+            &.vowel.ia {
+                font-size: 9em;
+                line-height: 2.4em;
             }
         }
 
