--- a/src/App.scss
+++ b/src/App.scss
@@ -5,6 +5,11 @@ body {
     font-optical-sizing: auto;
     font-style: normal;
     font-variation-settings: "wdth" 100;
+    overflow-x: hidden;
+
+    main {
+        overflow-x: hidden;
+    }
 
     .my {
         font-family: "Noto Sans Myanmar", sans-serif;
